# circlecover

./: .gitignore
Prover/: CMakeLists.txt  Doxyfile  interrupt.cpp  interrupt.hpp  operations.cu  operations.cuh  operations.hpp  output_case.hpp  prover.cpp  subintervals.hpp
Prover/algcuda/cuda-cpp-wrapper/include/algcuda/: device.hpp  error.hpp  memory.hpp  properties.hpp
Prover/algcuda/cuda-cpp-wrapper/src/: device.cpp  properties.cpp
Prover/algcuda/cuda-utils/cpp/include/algcuda/: atomic_float.hpp  interval.hpp  macros.hpp
Prover/algcuda/cuda-utils/cuh/include/algcuda/: exit.cuh  interval.cuh  vector.cuh
Prover/cmake/: util.cmake
Prover/rectangle_size_bound/: can_recurse.cu  compute_efficient_rectangle_cover_weight_range.cu  compute_even_split_distance_bound.cu  disk_satisfies_size_bound.cu  even_split_recursion.cu  five_disk_full_cover.cu  l_shaped_recursion.cu  maximize_covered.cu  multi_disk_strip.cu  r1_in_corner_explicit_recursion.cu  r1_in_corner_wall_building_recursion.cu  r1_r2_opposite_corners_recursion.cu  r1_r2_vertical_strip.cu  rectangle_size_bound.cu  seven_disk_strategies.cu  six_disk_full_cover.cu  six_disks_cover_width.cu  strategies.cuh  two_by_two_cover.cu  two_by_two_cover_with_strip_and_recursion.cu  uneven_split_recursion.cu  values.hpp  variables.cuh  variables.hpp  vertical_wall_building_recursion.cu
Prover/tight_rectangle/: can_apply_size_bounded_covering.cu  can_recurse.cu  critical_ratio.cu  r1_r2_large_r3_r4_gaps_strategy.cu  r1_r2_r3_strategies.cu  r1_r2_strategies.cu  r1_strategies.cu  strategies.cuh  tight_rectangle.cu  two_by_two_strategies.cu
